--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -1,30 +1,46 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/concursos"></ion-back-button>
-    </ion-buttons>
-    <ion-title>{{formTitle}}</ion-title>
+    <ion-grid >
+      <ion-row class="ion-justify-content-end">
+        <ion-col size="12" size-md="11">
+
+          <ion-row>
+            <ion-buttons >
+              <ion-back-button defaultHref="/concursos"></ion-back-button>
+            </ion-buttons>
+            <ion-title>{{formTitle}}</ion-title>
+          </ion-row>
+        
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form #f="ngForm" (ngSubmit)="postConcurso(f)">
-    <ion-item>
-      <ion-label>Nombre</ion-label>
-      <ion-input name="name" [ngModel]="concurso.name" required></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Descripcion</ion-label>
-      <ion-textarea name="description" [ngModel]="concurso.description" required></ion-textarea>
-    </ion-item>
-    <ion-item>
-      <ion-label>Fecha de inicio</ion-label>
-      <input type="date" name="start_date" [ngModel]="concurso.start_date" required>
-    </ion-item>
-    <ion-item>
-      <ion-label>Fecha de finalizacion</ion-label>
-      <input type="date" name="end_date" [ngModel]="concurso.end_date" required>
-    </ion-item>
-    <ion-button type="submit" [disabled]="!f.valid">Guardar</ion-button>
-  </form>
+  <ion-grid >
+    <ion-row class="ion-justify-content-center">
+      <ion-col size="12" size-md="10">
+        <form #f="ngForm" (ngSubmit)="postConcurso(f)">
+          <ion-item>
+            <ion-label>Nombre</ion-label>
+            <ion-input name="name" [ngModel]="concurso.name" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label>Descripcion</ion-label>
+            <ion-textarea name="description" [ngModel]="concurso.description" required></ion-textarea>
+          </ion-item>
+          <ion-item>
+            <ion-label>Fecha de inicio</ion-label>
+            <input type="date" name="start_date" [ngModel]="concurso.start_date" required>
+          </ion-item>
+          <ion-item>
+            <ion-label>Fecha de finalizacion</ion-label>
+            <input type="date" name="end_date" [ngModel]="concurso.end_date" required>
+          </ion-item>
+          <ion-button  expand="block" type="submit" [disabled]="!f.valid">Guardar</ion-button>
+        </form>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
