vista perfil y editar andando en local

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
           <ion-item [routerLink]="['/concursos']" >
             <ion-label>Concursos</ion-label>
           </ion-item>
+          <ion-item [routerLink]="['/perfil']" >
+            <ion-label>Perfil</ion-label>
+          </ion-item>
         </ion-list>
 
         <!-- <ion-list id="labels-list">
