busqueda concursos andando en local

--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -40,8 +40,8 @@
           </ion-card-header>
           <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
           <ion-card-content>
-            <ion-card-title>Secondary Title</ion-card-title>
-            {{concurso.description}}
+            <ion-card-title>Descripcion</ion-card-title>
+            <ion-text>{{concurso.description}}</ion-text>
           </ion-card-content>
           <!-- <ion-label>{{item}}</ion-label> -->
         </ion-card>
