--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -1,5 +1,4 @@
 <ion-header>
-
   <ion-toolbar color="dark">
     <ion-buttons slot="secondary">
       <ion-button>
@@ -14,27 +13,24 @@
     </ion-buttons>
     <ion-buttons slot="primary">
       <ion-button color="danger">
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+        <ion-icon
+          slot="icon-only"
+          ios="ellipsis-horizontal"
+          md="ellipsis-vertical"
+        ></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title slot="start">Icono Page</ion-title>
-    <ion-buttons slot="start" class="ion-hide-md-down"> <!-- up para PC -->
-      <ion-button>
-        Home
-      </ion-button>
-      <ion-button>
-        Reglamento
-      </ion-button>
-      <ion-button>
-        Concursos
-      </ion-button>
-      <ion-button>
-        Galería
-      </ion-button>
+    <ion-buttons slot="start" class="ion-hide-md-down">
+      <!-- up para PC -->
+      <ion-button> Home </ion-button>
+      <ion-button> Reglamento </ion-button>
+      <ion-button> Concursos </ion-button>
+      <ion-button> Galería </ion-button>
     </ion-buttons>
   </ion-toolbar>
 
-<!-- 
+  <!-- 
   <ion-navbar>
     <button ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -50,22 +46,19 @@
       </button>
     </ion-buttons>
   </ion-navbar> -->
-
 </ion-header>
 
 <ion-header>
   <ion-toolbar>
-    <ion-grid >
+    <ion-grid>
       <ion-row class="ion-justify-content-end">
         <ion-col size="12" size-md="11">
-
           <ion-row>
-            <ion-buttons >
+            <ion-buttons>
               <ion-back-button defaultHref="/concursos"></ion-back-button>
             </ion-buttons>
             <ion-title>Concursos</ion-title>
           </ion-row>
-        
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -73,46 +66,50 @@
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="ion-hide-md-up">
+  <ion-fab
+    vertical="bottom"
+    horizontal="end"
+    slot="fixed"
+    class="ion-hide-md-up"
+  >
     <ion-fab-button [routerLink]="['nuevo']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
-  </ion-fab> 
+  </ion-fab>
 
-  <ion-grid >
+  <ion-grid>
     <ion-row class="ion-justify-content-end">
       <ion-col size="12" size-md="7">
-
         <ion-list>
           <!-- <ion-item > -->
-            <!-- concurso card -->
-            <ion-card *ngFor="let concurso of concursos">
-              <ion-card-header>
-                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
-                <ion-card-title>{{concurso.name}}</ion-card-title>
-              </ion-card-header>
-              <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
-              <ion-card-content>{{concurso.description}}</ion-card-content>
-              <ion-row class="ion-float-right" >
-                <ion-col >
-                  <!-- <ion-toolbar> -->
-                    <!-- <ion-buttons slot="start"> -->
-                      <ion-button size="small" [routerLink]="[concurso.id]">Ver concurso</ion-button>
-                    <!-- </ion-buttons> -->
-                  <!-- </ion-toolbar> -->
-                </ion-col>
-              </ion-row>
-              <!-- <ion-label>{{item}}</ion-label> -->
-            </ion-card>
+          <!-- concurso card -->
+          <ion-card *ngFor="let concurso of concursos">
+            <ion-card-header>
+              <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
+              <ion-card-title>{{concurso.name}}</ion-card-title>
+            </ion-card-header>
+            <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
+            <ion-card-content>{{concurso.description}}</ion-card-content>
+            <ion-row class="ion-float-right">
+              <ion-col>
+                <!-- <ion-toolbar> -->
+                <!-- <ion-buttons slot="start"> -->
+                <ion-button size="small" [routerLink]="[concurso.id]"
+                  >Ver concurso</ion-button
+                >
+                <!-- </ion-buttons> -->
+                <!-- </ion-toolbar> -->
+              </ion-col>
+            </ion-row>
+            <!-- <ion-label>{{item}}</ion-label> -->
+          </ion-card>
           <!-- </ion-item> -->
         </ion-list>
       </ion-col>
       <!-- filtro y busqueda -->
-      <ion-col size="4"  class="ion-hide-md-down">
+      <ion-col size="4" class="ion-hide-md-down">
         <ion-button [routerLink]="['nuevo']">Nuevo</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
- 
 </ion-content>
-
