--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -1,46 +1,108 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/concursos"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Perfil</ion-title>
+    <ion-grid>
+      <ion-row class="ion-justify-content-end">
+        <ion-col size="12" size-md="11">
+          <ion-row>
+            <ion-buttons>
+              <ion-back-button defaultHref="/perfil"></ion-back-button>
+            </ion-buttons>
+            <ion-title>Perfil</ion-title>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-grid class="altura-cien">
+    <ion-row class="ion-justify-content-center altura-cien">
+      <ion-col size="12" size-md="10" class="altura-cien">
+        <ion-row class="ion-justify-content-center altura-treinta">
+          <ion-item>
+            <ion-card>
+              <ion-card-header>
+                <ion-avatar>
+                  <!-- <ion-icon
+                    style="font-size: '64px'"
+                    name="person-circle-outline"
+                  ></ion-icon> -->
+                  <img
+                    src="https://tse2.mm.bing.net/th?id=OIP.M2FKW7uS0BfRH6sykSn95wHaHa&pid=Api"
+                  />
+                </ion-avatar>
+              </ion-card-header>
 
-      <ion-avatar>
-        <ion-icon style="font-size:'64px'" name="person-circle-outline"></ion-icon>
-        <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
-      </ion-avatar>
-      
-      <ion-card-title>{{usuario.username}}</ion-card-title>
-      <ion-card-subtitle>{{usuario.email}}</ion-card-subtitle>
-      
-    </ion-card>
+              <ion-card-title class="ion-text-center"
+                >{{usuario.username}}</ion-card-title
+              >
+              <ion-card-subtitle class="ion-text-center"
+                >{{usuario.email}}</ion-card-subtitle
+              >
+            </ion-card>
+          </ion-item>
+        </ion-row>
 
-  <ion-list>
+        <ion-row class="altura-setenta">
+          <ion-header>
+            <ion-toolbar>
+              <ion-list>
+                <ion-item [routerLink]="['editar']">
+                  <ion-icon
+                    slot="start"
+                    ios="person-outline"
+                    md="person-sharp"
+                  ></ion-icon>
+                  <ion-label>Editar perfil</ion-label>
+                </ion-item>
 
-    <ion-item [routerLink]="['editar']" >
-      <ion-icon slot="start" ios="person-outline" md="person-sharp"></ion-icon>
-      <ion-label>Editar perfil</ion-label>
-    </ion-item>
+                <ion-item [routerLink]="['/perfil']">
+                  <ion-icon
+                    slot="start"
+                    ios="lock-closed-outline"
+                    md="lock-closed-sharp"
+                  ></ion-icon>
+                  <ion-label>Terminos y Condiciones</ion-label>
+                </ion-item>
 
-    <ion-item [routerLink]="['/perfil']" >
-      <ion-icon slot="start" ios="lock-closed-outline" md="lock-closed-sharp"></ion-icon>
-      <ion-label>Terminos y Condiciones</ion-label>
-    </ion-item>
+                <ion-item [routerLink]="['/perfil']">
+                  <ion-icon
+                    slot="start"
+                    ios="help-circle-outline"
+                    md="help-circle-sharp"
+                  ></ion-icon>
+                  <ion-label>Ayuda</ion-label>
+                </ion-item>
 
-    <ion-item [routerLink]="['/perfil']" >
-      <ion-icon slot="start" ios="help-circle-outline" md="help-circle-sharp"></ion-icon>
-      <ion-label>Ayuda</ion-label>
-    </ion-item>
+                <!-- <ion-item [routerLink]="['/perfil']" >
+                  <ion-icon
+                    slot="start"
+                    ios="log-out-outline"
+                    md="log-out-sharp"
+                  ></ion-icon>
+                  <ion-label>Log Out</ion-label>
+                </ion-item> -->
+              </ion-list>
+            </ion-toolbar>
+          </ion-header>
 
-    <ion-item [routerLink]="['/perfil']" >
-      <ion-icon slot="start" ios="log-out-outline" md="log-out-sharp"></ion-icon>
-      <ion-label>Log Out</ion-label>
-    </ion-item>
-
-  </ion-list>
+          <ion-footer>
+            <ion-toolbar>
+              <ion-list>
+                <ion-item [routerLink]="['/perfil']">
+                  <ion-icon
+                    slot="start"
+                    ios="log-out-outline"
+                    md="log-out-sharp"
+                  ></ion-icon>
+                  <ion-label>Log Out</ion-label>
+                </ion-item>
+              </ion-list>
+            </ion-toolbar>
+          </ion-footer>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
