--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,22 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <!-- <ion-menu contentId="main-content" type="overlay">
+
+  <!-- <ion-split-pane contentId="main-content"> -->
+    <ion-menu type="reveal" side="start" menuId="first" contentId="main-content">
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Start Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-item>Home</ion-item>
+          <ion-item>Reglamento</ion-item>
+          <ion-item>Concursos</ion-item>
+          <ion-item>Galería</ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+   <!--   <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Inbox</ion-list-header>
@@ -34,5 +50,5 @@
 
     
     <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+  <!-- </ion-split-pane> -->
 </ion-app>
