--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,9 @@
         <ion-list>
           <ion-item>Home</ion-item>
           <ion-item>Reglamento</ion-item>
-          <ion-item>Concursos</ion-item>
+          <ion-item [routerLink]="['/concursos']">Concursos</ion-item>
           <ion-item>Galería</ion-item>
+          <ion-item [routerLink]="['/usuarios']">Usuarios</ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
