--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-buttons slot="secondary">
-      <ion-button>
+      <ion-button (click)="openPopoverNotifications($event)">
         <ion-icon slot="icon-only" name="notifications-outline"></ion-icon>
       </ion-button>
-      <ion-button (click)="openPopover($event)"> <!-- [routerLink]="['/perfil']"> -->
+      <ion-button (click)="openPopoverUser($event)"> <!-- [routerLink]="['/perfil']"> -->
         <ion-icon slot="icon-only" name="person-circle"></ion-icon>
       </ion-button>
       <!-- <ion-button>
