--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -28,9 +28,11 @@
                     style="font-size: '64px'"
                     name="person-circle-outline"
                   ></ion-icon> -->
-                  <img
+                  <!-- <img
                     src="https://tse2.mm.bing.net/th?id=OIP.M2FKW7uS0BfRH6sykSn95wHaHa&pid=Api"
-                  />
+                  /> -->
+                  
+                  <img [src]="usuario.img_url">
                 </ion-avatar>
               </ion-card-header>
 
