--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -39,7 +39,7 @@
 <ion-content>
   <ion-grid>
     <ion-row class="ion-justify-content-end">
-      <ion-col size="12" size-md="7">
+      <ion-col size="12" size-md="8">
         <ion-searchbar [(ngModel)]="searchQuery"></ion-searchbar>
         <!-- <ion-searchbar (ionChange)="buscarConcursos($event.target.value)"></ion-searchbar> -->
         <!-- <table *ngIf="usuariosFiltrados.length > 0; else texto">
@@ -80,52 +80,11 @@
           </tbody>
         </table> -->
 
-        <ion-grid *ngIf="usuariosFiltrados.length > 0; else texto">
-          <ion-row>
-            <ion-row style="width: 100%;" class="ion-align-items-center">
-              <ion-col size="2" *ngFor="let p of usuarioProps">{{p}}</ion-col>
-              <ion-col>Acciones</ion-col>
-            </ion-row>
-          </ion-row>
-          <ion-row>
-            <ion-row style="width: 100%;" class="ion-align-items-center" *ngFor="let u of usuariosFiltrados">
-              <ion-col size="2">{{u.id}}</ion-col>
-              <ion-col size="2">{{u.username}}</ion-col>
-              <ion-col size="3">{{u.email}}</ion-col>
-              <ion-col size="2">
-                <ion-button [href]="[u.img_url]" target="_blank">
-                  <ion-icon size="small" name="link"></ion-icon>
-                </ion-button>
-              </ion-col>
-              <ion-col size="3">
-                <ion-button
-                  slot="end"
-                  class="ion-float-right"
-                  (click)="deleteUsuario(u.id)"
-                >
-                  <ion-icon size="small" name="trash"></ion-icon>
-                </ion-button>
+        <app-tabla-usuarios></app-tabla-usuarios>
 
-                <ion-button
-                  slot="start"
-                  class="ion-float-right"
-                  (click)="editUsuario(u.id)"
-                >
-                  <ion-icon size="small" name="create"></ion-icon>
-                </ion-button>
-              </ion-col>
-            </ion-row>
-          </ion-row>
-        </ion-grid>
-
-        <ng-template #texto>
-          <ion-item
-            >No hay usuarios que empiecen con '{{searchQuery}}'</ion-item
-          >
-        </ng-template>
       </ion-col>
       <!-- filtro y busqueda -->
-      <ion-col size="4" class="ion-hide-md-down">
+      <ion-col size="3" class="ion-hide-md-down">
         <ion-button [routerLink]="['nuevo']">Nuevo</ion-button>
       </ion-col>
     </ion-row>
