--- a/src/app/usuario/usuario-edit/usuario-edit.page.html
+++ b/src/app/usuario/usuario-edit/usuario-edit.page.html
@@ -1,9 +1,10 @@
-<ion-header>  <ion-toolbar>
-  <ion-buttons slot="start">
-    <ion-back-button defaultHref="/perfil"></ion-back-button>
-  </ion-buttons>
-  <ion-title>Editar Perfil</ion-title>
-</ion-toolbar>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/perfil"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Editar Perfil</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
@@ -11,24 +12,40 @@
     <ion-row class="ion-justify-content-center">
       <ion-col size="12" size-md="10">
         <form #f="ngForm" (ngSubmit)="editUsuario(f)">
-          <ion-avatar>
-            <!-- <ion-icon style="font-size:'64px'" name="person-circle-outline"></ion-icon> -->
-            <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
-            <img [src]="usuario.img_url">
-          </ion-avatar>
+          <ion-row class="ion-justify-content-center">
+            <ion-avatar>
+              <!-- <ion-icon style="font-size:'64px'" name="person-circle-outline"></ion-icon> -->
+              <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
+              <img [src]="usuario.img_url" />
+            </ion-avatar>
+          </ion-row>
           <ion-item>
             <ion-label>Nombre</ion-label>
-            <ion-input name="username" [ngModel]="usuario.username" required></ion-input>
+            <ion-input
+              name="username"
+              [ngModel]="usuario.username"
+              required
+            ></ion-input>
           </ion-item>
           <ion-item>
             <ion-label>Email</ion-label>
-            <ion-textarea name="email" [ngModel]="usuario.email" required></ion-textarea>
+            <ion-textarea
+              name="email"
+              [ngModel]="usuario.email"
+              required
+            ></ion-textarea>
           </ion-item>
           <ion-item>
             <ion-label>Imagen(url)</ion-label>
-            <ion-input name="img_url" [(ngModel)]="usuario.img_url" required></ion-input>
+            <ion-input
+              name="img_url"
+              [(ngModel)]="usuario.img_url"
+              required
+            ></ion-input>
           </ion-item>
-          <ion-button expand="block" type="submit" [disabled]="!f.valid">Guardar</ion-button>
+          <ion-button expand="block" type="submit" [disabled]="!f.valid"
+            >Guardar</ion-button
+          >
         </form>
       </ion-col>
     </ion-row>
