--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <ion-app>
-
+<app-navbar></app-navbar>
+  
   <!-- <ion-split-pane contentId="main-content"> -->
     <ion-menu type="reveal" side="start" menuId="first" contentId="main-content">
       <ion-header>
