--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header> -->
   <ion-toolbar color="dark">
     <ion-buttons slot="secondary">
       <ion-button (click)="mostrarNotificaciones($event)">
@@ -23,4 +23,4 @@
       <ion-button [routerLink]="['/usuarios']"> Usuarios </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-header>
+<!-- </ion-header> -->
