--- a/src/app/notificaciones/notificaciones.page.html
+++ b/src/app/notificaciones/notificaciones.page.html
@@ -20,23 +20,35 @@
     <ion-row class="ion-justify-content-center">
       <ion-col size="12" size-md="10">
         
-        <ion-item-group>
-          <ion-item-divider>
-            <ion-label>A</ion-label>
-          </ion-item-divider>
+        <ion-list>
+          <!-- <ion-item-divider>
+            <ion-label>Tienes una notificación</ion-label>
+          </ion-item-divider> -->
         
           <ion-item>
-            <ion-label>Angola</ion-label>
+            <ion-icon name="ellipse" size="small" color="primary"></ion-icon>
+            <ion-label class="ion-margin-start">
+              <h4>Lorem ipsum</h4>
+              <small>Hace 5 minutos</small>
+            </ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>Argentina</ion-label>
+            <ion-icon name="ellipse-outline" size="small" color="light"></ion-icon>
+            <ion-label class="ion-margin-start">
+              <h4>Lorem ipsum</h4>
+              <small>Hace 5 minutos</small>
+            </ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>Armenia</ion-label>
+            <ion-icon name="ellipse-outline" size="small" color="light"></ion-icon>
+            <ion-label class="ion-margin-start">
+              <h4>Lorem ipsum</h4>
+              <small>Hace 5 minutos</small>
+            </ion-label>
           </ion-item>
-        </ion-item-group>
+        </ion-list>
         
-        <ion-item-group>
+        <!-- <ion-item-group>
           <ion-item-divider>
             <ion-label>B</ion-label>
           </ion-item-divider>
@@ -50,7 +62,7 @@
           <ion-item>
             <ion-label>Belgium</ion-label>
           </ion-item>
-        </ion-item-group>
+        </ion-item-group> -->
 
       </ion-col>
     </ion-row>
