--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -19,7 +19,7 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col size="12" size-md="10">
-        <form #f="ngForm" (ngSubmit)="postConcurso(f)">
+        <form #f="ngForm" (ngSubmit)="postUsuario(f)">
           <ion-row class="ion-justify-content-center">
             <ion-avatar>
               <!-- <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"> -->
